Update to GeoTools 21.4.